# minitraceback

./: pyproject.toml
.github/workflows/: test.yaml
src/minitraceback/: __init__.py
tests/: test_minitraceback.py
tests/sub/: __init__.py
